--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,13 @@
 .app {
   min-height: 100vh;
 }
+
+.bground {
+  background-image: url("https://wallpapercave.com/wp/wp1868041.jpg");
+
+  position: absolute;
+  top: 10;
+  left: 0;
+  width: 100%;
+  height: 92%;
+}
